gitops/prep/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pred-dev
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: pred-api
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
