gitops/prep/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pred-dev
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: api
  type: ClusterIP
